Basic html for the main page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Angular app files -->
     <script src="app/app.js"></script>
     <!-- Controllers -->
-
+    <script src="app/controllers/mainController.js"></script>
     <!-- Services -->
 
     <!-- Mapael-->
@@ -20,17 +20,18 @@
     <!-- Css -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="octicons/octicons.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
   </head>
-  <body ng-app="showcaseApp" ng-controller="MainController">
+  <body ng-app="photostatsApp" ng-controller="MainController">
     <div ng-view></div>
     <footer class="text-center">
       <div class="footer">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-                <a href="https://github.com/jianweichuah/showcase">
+                <a href="https://github.com/jianweichuah/photostats">
                   <span class="octicon octicon-code"></span>
                 </a>
                 with
